@@ -4,4 +4,3 @@ MANIFEST
 README
 Highlight.pm
 hl
-META.yml                                 Module meta-data (added by MakeMaker)
