@@ -1,4 +1,4 @@
-Highlight version 1.8.5
+Highlight version 1.8.6
 =======================
 
 INSTALLATION
