@@ -3,7 +3,7 @@
 use Term::Highlight qw( LoadArgs Process );
 
 ( $PROGNAME = $0 ) =~ s/.*\///;
-$VERSION = "1.8.5";
+$VERSION = "1.8.6";
 $TAGTYPE = "term";
 $RC_FILE = "$ENV{ HOME }/.hlrc";
 $SNIPPET_PTN = qr/^\s*snippet\s+(\S+)\s+(.*)/o;
@@ -351,16 +351,17 @@ hl [global-options] [[--] highlight-options [patterns] ...] [- file1 [file2] ...
 
 =head1 DESCRIPTION
 
-hl reads text from list of files or stdin and prints it on the console
-with specified patterns highlighted using terminal color escape sequences.
+hl reads text from list of files or standard input and prints it on terminal
+with specified patterns highlighted using ANSI color escape sequences.
 Patterns are intrinsically perl-compatible regular expressions.
 
 Global options are processed internally by hl whereas highlight options
 are passed into Term::Highlight module, therefore they should not mix.
-The first occurrence of an option which are not recognized as global is
-regarded as the beginning of highlight options. Highlight options can be
-explicitly separated from global options with option '--' (must not be confused
-with option '-' that separates list of files from highlight options).
+The first occurrence of an option which has not been recognized as global is
+regarded as beginning of highlight options.
+Highlight options can be explicitly separated from global options with option
+'--' (must not be confused with option '-' that separates list of files from
+highlight options).
 
 =head3 Global options:
 
@@ -368,18 +369,18 @@ with option '-' that separates list of files from highlight options).
 
 =item -s <snippet>
 
-loads a snippet with specified name from file ~/.hlrc.  The white space between
-'-s' and the name of snippet can be omitted. For example -sW will load snippet
-with name 'W'.
+loads a snippet with the specified name from file ~/.hlrc.
+The white space between '-s' and the name of snippet may be omitted.
+For example -sW will load snippet with name 'W'.
 
 =item -g (-grep)
 
-prints only lines which match specified patterns.
+prints only lines that match specified patterns.
 
 =item -r
 
 greps recursively, implies '-g'.
-If file list is empty starts search in current directory.
+If the file list is empty then grep starts in the current directory.
 
 =item -l
 
@@ -416,13 +417,14 @@ prints usage and exits.
 =item -x[xx][.b]
 
 highlights following patterns with color defined by number x[xx].
-x[xx] is color id corresponding to terminal color escape sequence number
-and should range within [0..255]. I<b> is 0 or 1, .0 applies the color id
-to foreground, .1 - to background, .0 is default value and may be omitted.
+x[xx] is color id corresponding to an ANSI color escape sequence number
+and thus should range within [0..255].
+I<b> must be 0 or 1: .0 applies the color id to foreground, .1 - to background.
+.0 is default choice and may be omitted.
 If your terminal does not support 256 colors then valid color ids are [0..15].
 I<Note>: if your terminal is 256 colors capable then better use [16..255]
-colors! To see for how many colors your terminal has support use command
-B<tput colors> .
+colors!
+To see for how many colors your terminal has support use command B<tput colors>.
 
 =item -i
 
@@ -475,8 +477,9 @@ explicitly separates global and highlight options.
 
 =item -
 
-separates global and highlight options from list of files to process. As soon as
-hl may read from stdin, using a list of files to process is not obligatory.
+separates global and highlight options from list of files to process.
+As soon as hl may read from standard input, using a list of files to process is
+not obligatory.
 
 =back
 
@@ -487,9 +490,10 @@ hl may read from stdin, using a list of files to process is not obligatory.
 =item B<HL_INITSTRING>
 
 defines common highlight options which will be prepended to any highlight
-options given in command line. For example setting B<HL_INITSTRING>='-21 -i'
-will make hl highlight patterns with blue (color id 21) and ignore cases without
-explicit definition of highlight options in command line.
+options given in command line.
+For example setting B<HL_INITSTRING>='-21 -i' will make hl highlight patterns
+with color id 21 and ignore cases without explicit definition of highlight
+options in command line.
 I<Note>: B<HL_INITSTRING> must not contain global options!
 
 =back
@@ -498,30 +502,33 @@ I<Note>: B<HL_INITSTRING> must not contain global options!
 
 B<ls | hl -b -46.1 -21 '\bw.*?\b'>
 
-reads output of B<ls> command and highlight words starting with I<w> with bold
-blue (color id 21) foreground and green (color id 46) background.
+reads output of command B<ls> and highlights words that start with I<w> in
+color id 21 using color id 46 for background and bold font.
 
 =head1 FILES
 
 B<~/.hlrc>
 
-currently this file may contain only snippets that can be loaded with '-s'
-option. The format of the snippet line is
+currently this file may contain only snippets that can be loaded with option
+'-s'.
+The format of the snippet line is
 
 B<snippet name highlight_options>
 
 where I<snippet> is a keyword, I<name> is the name of the snippet and
 I<highlight_options> contains highlight options possibly preceded by the global
-option '-u'. Here is an example of snippet which can be used to highlight words
-that start with capital letter:
+option '-u'.
+Here is an example of snippet which can be used to highlight words that start
+with a capital letter:
 
 B<snippet W       -130 (?:^|[\s])[A-Z]\S+>
 
-Lines that do not match the snippet line pattern are ignored. Arguments of
-highlight_options are naturally split by whitespaces. If you want to have
-whitespaces inside patterns you can use single quotes surrounding them. Single
-quote itself must be prepended by backslash. Too long lines can be split into
-multiple lines using backslash.
+Lines that do not match the snippet line pattern are ignored.
+Arguments of highlight_options are naturally split by whitespaces.
+If you want to have whitespaces inside patterns you can use single quotes
+surrounding them.
+Single quote by itself must be escaped by a backslash.
+Too long lines can be split into multiple lines using backslashes.
 
 =head1 SEE ALSO
 
